Closed Bug 517787 Opened 16 years ago Closed 16 years ago

Clicking a partially off-screen link shouldn't scroll the page (again)

Categories

(Core :: DOM: UI Events & Focus Handling, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9.3a1
Tracking Status
status1.9.2 --- beta1-fixed

People

(Reporter: jruderman, Assigned: masayuki)

References

Details

(Keywords: regression)

Attachments

(2 files, 1 obsolete file)

Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.3a1pre) Gecko/20090920 Firefox/3.7a1pre This was fixed once before in bug 105894, but it's broken again.
Keywords: regression
Attached patch Patch v1.0 (obsolete) — Splinter Review
checking on the tryserver.
Assignee: nobody → masayuki
Status: NEW → ASSIGNED
This should be a regression of the focus refactoring, we should fix this on 1.9.2 branch too.
Blocks: 178324
Flags: blocking1.9.2?
OS: Mac OS X → All
Hardware: x86 → All
Attachment #401796 - Flags: review?(enndeakin)
Comment on attachment 401796 [details] [diff] [review] Patch v1.0 >+<window title="Focus Scroll Tests" >+ onload="setTimeout(runTest, 0);" You should use SimpleTest.waitForFocus since retrieving fm.focusedElement will rely on the window being focused.
Attachment #401796 - Flags: review?(enndeakin) → review+
Attached patch Patch v1.1Splinter Review
thanks
Attachment #401796 - Attachment is obsolete: true
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
Comment on attachment 401863 [details] [diff] [review] Patch v1.1 We should fix this regression on 1.9.2 branch too. The risk is low. This patch only suppresses the scrolling at clicking a link.
Attachment #401863 - Flags: approval1.9.2?
Flags: blocking1.9.2? → blocking1.9.2+
Priority: -- → P2
Attachment #401863 - Flags: approval1.9.2?
Component: Event Handling → User events and focus handling
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: