Bug 517787 Clicking a partially off-screen link shouldn't scroll the page (again) r=enndeakin